syntax = "proto3";
option java_multiple_files = true;
package com.p2p.grpc;

service MarketPlace {
  rpc lookupRPC(LookUpRequest) returns (Empty);
  rpc replyRPC(ReplyRequest) returns (Empty);
  rpc buyRPC(BuyRequest) returns (Ack);
}

message Ack {
  string message = 1;
}

message Empty {

}

message LookUpRequest {
  int32 fromNode = 1;
  string product = 2;
  int32 hopCount = 3;
  repeated int32 path = 4;
}

message ReplyRequest {
  PeerId sellerId = 1;
  string product = 2;
  repeated int32 path = 3;
}

message BuyRequest {
  int32 id = 1;
  string Product = 2;
}

message PeerId {
  int32 id = 1;
  string IPAddress = 2;
  int32 port = 3;
}

enum Product {
  FISH = 0;
  SALT = 1;
  BOAR = 2;
}




